feat: add create notes
