# internal/shared/presentation/handler.go
@@ -25,7 +25,7 @@ func NewHealthHandler(healthService application.HealthService) *HealthHandler {
 // @Produce json
 // @Success 200 {object} HealthResponse "Health status response"
 // @Failure 503 {object} HealthResponse "Health status response"
-// @Router /healthcheck [get]
+// @Router /api/healthcheck [get]
 func (h *HealthHandler) HealthCheck(w http.ResponseWriter, r *http.Request) {
 	output := h.healthService.HealthCheck(r.Context())
 
